kubernetes/apps/metrics/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metrics-argocd-route
  namespace: traefik
spec:
  parentRefs:
    - name: cluster-edge-gateway
      namespace: traefik
  hostnames:
    - metrics.kwer.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      backendRefs:
        - name: argocd-server
          port: 80
          namespace: argocd
